Change text color, fix low contrast

--- a/css/less/main.less
+++ b/css/less/main.less
@@ -240,7 +240,7 @@ hr {
     background: #34495e;
 }
 .desc more {
-    color: #95a5a6;
+    color: #080808;
 }
 sm {
     font-size: 12px;
